Issue #3172655 by gpietrzak: (v 2.2) Fix gallery spacing

--- a/themes/custom/droopler_theme/scss/components/_d_p_gallery.scss
+++ b/themes/custom/droopler_theme/scss/components/_d_p_gallery.scss
@@ -7,6 +7,7 @@ $d-p-gallery-line-color: $color-agamemnon !default;
 $d-p-gallery-line-color-inverted: $color-nestor !default;
 $d-p-gallery-color: $color-hecuba !default;
 $d-p-gallery-bold-color: $color-troilus !default;
+$d-p-gallery-image-margin-bottom: 0 !default;
 
 .paragraph--type--d-p-gallery {
   text-align: center;
@@ -49,6 +50,7 @@ $d-p-gallery-bold-color: $color-troilus !default;
     img {
       width: 100%;
       height: auto;
+      margin-bottom: $d-p-gallery-image-margin-bottom;
     }
   }
 }
